Closed
Bug 606155
Opened 15 years ago
Closed 15 years ago
LayerManagerD3D9.cpp compilation failure on mingw
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jacek, Assigned: jacek)
Details
Attachments
(1 file)
|
474 bytes,
patch
|
bas.schouten
:
review+
benjamin
:
approval2.0+
|
Details | Diff | Splinter Review |
After landing bug 601928 I get following failure when compiling on mingw:
mozilla-central/gfx/layers/d3d9/LayerManagerD3D9.cpp:266:22: error: call of overloaded 'AppendInt(HRESULT&)' is ambiguous
../../dist/include/nsTSubstring.h:415:12: note: candidates are: void nsACString_internal::AppendInt(PRUint64)
../../dist/include/nsTSubstring.h:408:12: note: void nsACString_internal::AppendInt(PRInt64)
../../dist/include/nsTSubstring.h:401:12: note: void nsACString_internal::AppendInt(PRUint32)
../../dist/include/nsTSubstring.h:394:12: note: void nsACString_internal::AppendInt(PRInt32)
An explicit cast of HRESULT to PRUint32 fixes the problem.
| Assignee | ||
Updated•15 years ago
|
Attachment #485016 -
Attachment is patch: true
Attachment #485016 -
Flags: review?(bas.schouten)
| Assignee | ||
Updated•15 years ago
|
QA Contact: layout → jacek
Updated•15 years ago
|
Attachment #485016 -
Flags: review?(bas.schouten) → review+
| Assignee | ||
Updated•15 years ago
|
Attachment #485016 -
Flags: approval2.0?
Updated•15 years ago
|
Assignee: nobody → jacek
QA Contact: jacek → layout
Updated•15 years ago
|
Attachment #485016 -
Flags: approval2.0? → approval2.0+
| Assignee | ||
Comment 1•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•