Bug 606155 - LayerManagerD3D9.cpp compilation failure on mingw r=bas.schouten a=benjamin